casi terminando la pagina de inicio

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card">
-                <img src="" class="card-img-top" alt="...">
+                <img src="./img/imagenes/Israel.png" class="card-img-top" alt="bandera de Israel">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title"></h5>
+                    <p class="card-text"></p>
                 </div>
             </div>
         </div>
@@ -51,17 +51,66 @@
                         <p class="card-text"></p>
                 </div>
             </div>
-                </div>
+        </div>
         <div class="col">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./img/imagenes/argentina.png" class="card-img-top" alt="bandera de argentina">
                     <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title"></h5>
+                    <p class="card-text"></p>
                 </div>
             </div>
         </div>
-    </main> 
+        <!-- Cateles de bootstrap -->
+        <div class="card-text border-primary mb-3" style="max-width: 18rem;">
+            <div class="card-header">Sobre nosotros</div>
+            <div class="card-body text-primary">
+                <h5 class="card-title"></h5>
+                <p class="card-text-">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        <div class="card-text border-primary mb-3" style="max-width: 18rem;">
+            <div class="card-header">¿Que es el Krav Maga?</div>
+            <div class="card-body text-primary">
+                <h5 class="card-title"></h5>
+                <p class="card-text-">
+                    El Krav Maga es un sistema de defensa personal y combate cuerpo a cuerpo desarrollado en Israel. Fue creado por Imi Lichtenfeld, quien diseñó esta disciplina en la década de 1930 como un método efectivo para que los judíos pudieran defenderse de los ataques antisemitas en la Europa de ese tiempo. El Krav Maga se ha desarrollado y perfeccionado a lo largo de los años y se ha convertido en un sistema de autodefensa ampliamente reconocido y enseñado en todo el mundo.
+                    El Krav Maga se caracteriza por su enfoque práctico y eficiente en situaciones de combate real. A diferencia de las artes marciales tradicionales que a menudo se centran en la competencia deportiva o el aspecto cultural, el Krav Maga se enfoca en la autodefensa y la supervivencia en situaciones peligrosas, incluyendo enfrentamientos callejeros, ataques armados y amenazas múltiples.
+                    Las técnicas de Krav Maga incorporan una combinación de movimientos de boxeo, lucha libre, artes marciales y entrenamiento militar. Los practicantes de Krav Maga aprenden a defenderse contra una variedad de ataques, incluyendo golpes, agarres, estrangulamientos y amenazas con armas. También se enfatiza la reacción instintiva y la toma de decisiones rápidas en situaciones de alto estrés.
+                    El Krav Maga se ha ganado una reputación por ser un sistema de autodefensa efectivo y se enseña en escuelas y academias en todo el mundo. Es especialmente popular entre las fuerzas de seguridad, como la policía y el ejército, debido a su enfoque práctico y su capacidad para entrenar a individuos en un corto período de tiempo. Además, el Krav Maga se ha adaptado para ser accesible a personas de todas las edades y niveles de condición física, lo que lo hace adecuado para aquellos que buscan aprender a protegerse en situaciones de peligro.
+                </p>
+            </div>
+        </div>
+        <div class="card-text border-primary mb-3" style="max-width: 18rem;">
+            <div class="card-header">Sobre nosotros</div>
+            <div class="card-body text-primary">
+                <h5 class="card-title"></h5>
+                <p class="card-text-">
+                    Palmach (en hebreo: פלמ"ח) es el nombre de una organización paramilitar judía que existió en la Tierra de Israel durante el período del Mandato Británico (1920-1948) y luego se integró en las Fuerzas de Defensa de Israel (IDF) después de la creación del Estado de Israel en 1948. El nombre "Palmach" es una abreviatura de "Plugot Mahatz" (en hebreo: פלוגות מחץ), que se traduce como "Compañías de Ataque". Fue una unidad paramilitar de élite formada para la defensa del territorio y la población judía en la Tierra de Israel y complementario un papel crucial en la lucha por la independencia de Israel.
+                    El Palmach se fundó en 1941 bajo el liderazgo de Yitzhak Sadeh y contaba con miles de miembros, principalmente jóvenes judíos. Estaba organizado en unidades de combate y realizaba diversas operaciones, incluyendo actividades de sabotaje contra las autoridades británicas, la lucha contra grupos armados árabes y la preparación para la futura guerra de independencia.
+                    Después de la creación de Israel en 1948 y la consolidación de las Fuerzas de Defensa de Israel (IDF), el Palmach se disolvió oficialmente y sus miembros se integraron en las IDF. Sin embargo, su legado y su espíritu de unidad, compromiso y valentía continúan siendo una parte importante de la historia militar y la identidad nacional de Israel. Muchos de los líderes y figuras influyentes en la vida política y militar de Israel en las décadas posteriores tenían sus raíces en el Palmaj.
+                </p>
+            </div>
+        </div>
+    </main>
+    <!-- footer -->
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.instagram.com/academiapalmaj.kmg/" target="_blank"><img src="./icons/instagram.png" alt="instagram de la academia"></a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/KravMagaPalmaj" target="_blank"><img src="./icons/facebook.png" alt="facebook de la academia"></a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="" target="_blank"><img src="./icons/whatsapp.png" alt="whatsapp del instructor"></a>
+            </li>
+        </ul>
+    </footer> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
