--- a/pages/entrenamiento.html
+++ b/pages/entrenamiento.html
@@ -31,7 +31,11 @@
         <h1>
             Vamos a entrenar krav maga
         </h1>
-    </main> 
+    </main>
+    <!-- footer -->
+    <footer>
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
